  * debian/tests/*: add autopkgtest to test install TestExtension.oxt
    (user and shared)
  * debian/tests/*: add initial version of a autopkgtest to run the smoketest,
    build smoketestdoc.sxw here for now (and a full build...). Disabled for now.
  * debian/control.transitionals.in: add -kde -> kde5 transitional package
  * debian/control.in:
    - update for new icon defaults, make -common depend on -style-colibre and
      -gnome recommend -style-elementary

  * merge from Ubuntu:
    - debian/patches/hide-maths-desktop-file.patch: hide
      math icon from the shell (see #883734)

 -- Rene Engelhard <rene@debian.org>  Tue, 07 Nov 2017 20:59:01 +0100

libreoffice (1:6.0.3-2) UNRELEASED; urgency=medium

  * debian/patches/appstream-ignore-startcenter.diff: add
    X-AppStream-Ignore=True to startcenter.desktop, thanks Olivier
    (closes: #892364)

 -- Rene Engelhard <rene@debian.org>  Wed, 11 Apr 2018 12:05:40 +0200

libreoffice (1:6.0.3-1) unstable; urgency=medium

  * New upstream release

  * debian/patches/gpg-overly-long-filenames-fix.diff: backport
    https://gerrit.libreoffice.org/#/c/50978/ fix to fix gpg encryption
    test ("File name too long")
  * debian/patches/disable-flaky-tests.diff: remove disabling of
    testODFEncryptedGPG.
  * debian/patches/check-for-gpgconf-and-run-user.diff: as name says,
    don't fail when gpgconf --create-socketdir doesn't work because
    /run/user/<uid> doesn't exist... Check for it.

  * debian/rules:
    - add explicit gpg-agent and gpgconf build-dependencies
    - add explicit python3-distutils build-dependency as
      python3.6 3.6.5~rc1-2 dropped its python3-distutils dependency...

 -- Rene Engelhard <rene@debian.org>  Mon, 02 Apr 2018 14:48:09 +0000

libreoffice (1:6.0.2-1) unstable; urgency=medium

  [ Rene Engelhard ]
  * New upstream release

  * debian/patches/orcus-0.13.3.diff: backport patches to fix build/tests
    against orcus 0.13.3