@@ -1,10 +1,0 @@
-#!/bin/sh
-
-# experimental stuff enabled?
-echo "" >&3
-echo "Experimental features enabled:" >&3
-#_lo_profile_ver=`echo @OOVER@ | cut -d. -f1`
-_lo_profile_ver=4
-if [ -d "$HOME/.config/libreoffice/$_lo_profile_ver" ]; then
-        grep ExperimentalMode $HOME/.config/libreoffice/$_lo_profile_ver/user/registrymodifications.xcu >&3
-fi
