@@ -20,6 +20,8 @@ libreoffice (1:6.1.0~alpha1~git20180418-1) UNRELEASED; urgency=medium
   * debian/tests/*: add initial version of a autopkgtest to run the smoketest,
     build smoketestdoc.sxw here for now (and a full build...). Disabled for now.
   * debian/control.transitionals.in: add -kde -> kde5 transitional package
+  * debian/libreoffice-sdbc-firebird.bug-script.in: remove, firebird not
+    experimental anymore
   * debian/control.in:
     - update for new icon defaults, make -common depend on -style-colibre and
       -gnome recommend -style-elementary
